examples/test/testpolicy3552.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3552
  namespace: namespace93
spec:
  podSelector:
    matchLabels:
      key35: value28
      key34: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value28
      podSelector:
        matchLabels:
          key29: value21
          key12: value16
          key21: value19
